2008-07-13  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerrenderer.py.in
	(PokerRendererTests.test11_handleSerial): Wrote test.

2008-07-12  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerrenderer.py.in (PokerRendererTests): Created
	test class and essential Mock subclasses.
	(PokerRendererTests.setUp): Wrote method.
	(PokerRendererTests): Wrote method.
	(PokerRendererTests.MockPokerFactory.__init__): Added remember variable.
	(PokerRendererTests.MockInterface): Created mock up.
	(PokerRendererTests.MockPokerProtocol): Created mock up.
	(PokerRendererTests.MockUser): Created mock up.
	(PokerRendererTests.test03_interfaceReadyWithProtocol): Wrote method.
	(PokerRendererTests.test04_handleMenuQuit): Wrote method.
	(PokerRendererTests.MockGame): Wrote mock up.
	(PokerRendererTests.MockPokerFactory.getGame): Wrote method.
	(PokerRendererTests.MockPokerProtocol.getSerial): Wrote method.
	(PokerRendererTests.MockPokerProtocol.getCurrentGameId): Wrote method.
	(PokerRendererTests.test05_sitOutButNoGame): Wrote method.
	(PokerRendererTests.MockGame): Wrote method.
	(PokerRendererTests.MockPlayer): Created mock up.
	(PokerRendererTests.test06_sitOutButWithGameBadPlayer): Wrote test.
	(PokerRendererTests.test07_chatFormatMessage): Wrote method.
	(PokerRendererTests.test08_chatLineNoGame): Wrote method.
	(PokerRendererTests.test09_showMessageNoCallback): Wrote method.
	(PokerRendererTests.test10_updateCashier): Wrote method.

2008-07-07  Johan Euphrosine  <proppy@aminche.com>

	* Release 1.7.0

	* pokernetwork/pokerauth.py (get_auth_instance):
	Add authentification modularity.
	* pokernetwork/pokerauthmysql.py:
	Add authenfification module based on a foreign mysql database.
	* tests/test-pokerauth.py.in:
	Add tests for authentification modules lookup.

2008-07-06  Bradley M. Kuhn  <bkuhn@ebb.org>

	* pokerui/pokerrenderer.py (PokerInteractors.interactorSelected):
	Fixed reference to unknown variable "event".

	* tests/test-pokerrenderer.py.in