@@ -2,6 +2,8 @@
 
 	* tests/test-pokerrenderer.py.in
 	(PokerRendererTests.test11_handleSerial): Wrote test.
+	(PokerRendererTests.test12_handleConnectionHandListBadState):
+	Wrote test.
 
 2008-07-12  Bradley M. Kuhn  <bkuhn@ebb.org>
 
